tests/semantic/invalid/expected/struct_duplicate_field.txt
semantic error: повторное объявление - идентификатор 'x' уже объявлен в этой области видимости
  --> tests/semantic/invalid/struct_duplicate_field.src:4:9
4  int x;
       ^
   = идентификатор: 'x'
   = подсказка: переименуйте идентификатор или удалите предыдущее объявление

